Seccion Pinturas finish

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="Imagenes/Logo_Hector.png" alt="logo" height="50px" /></a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="Imagenes/Logo_Luna.png" alt="logo" height="50px" /></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -42,10 +42,11 @@
                                 <a class="nav-link active" aria-current="page" href="#">Sobre mí</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Escultura</a>
+                                <a class="nav-link" href="#">Pintura</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Pintura</a>
+
+                                <a class="nav-link" href="#">Escultura</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Grabado</a>
@@ -61,7 +62,7 @@
                         <img src="Imagenes/instagram.png" alt="Icono de Instagram" height="30px" />
                     </a>
                     <a href="mailto:sirkhan3@gmail.com" class="button" target="_blank">
-                        <img src="Imagenes/email.png" alt="Icono de WhatsApp" height="30px" />
+                        <img src="Imagenes/email.png" alt="Icono Mail" height="30px" />
                     </a>
                 </div>
 
@@ -71,33 +72,38 @@
 
     <div class="contenedor">
         <section class="hero">
+            <img class="imgMain" src="Imagenes/Perfil.enc" alt="Sobre mi" />
             <div class="contenido-hero">
                 <h2 class="titulo">Héctor<span>Luna</span></h2>
             </div>
+
         </section>
+        <main class="parrafo">
+
+            <h3>
+                <i>
+          Artistasta Plastico 
+        </i>
+            </h3>
+            <p>
+                <br />
+                <strong><i> </i></strong> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, praesentium amet, non exercitationem nostrum, perferendis vitae ea tempore voluptate velit consequatur! Dicta porro repudiandae quis in debitis ipsam
+                dolores explicabo.
+                <br />
+                <br />Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eaque qui saepe perferendis voluptatum et nesciunt reiciendis quia perspiciatis vitae aperiam dolorem voluptatibus adipisci sunt maxime, doloremque, pariatur quas
+                quisquam.
+            </p>
+        </main>
+
+
     </div>
 
-    <main class="parrafo">
-        <img class="imgMain" src="Imagenes/Perfil.enc" alt="tarjeta_Inicial" />
-        <h3>
-            <i>
-          Bienvenidos a CSM Mobiliario, Transformando Espacios con Elegancia y
-          Durabilidad
-        </i>
-        </h3>
-        <p>
-            <br />
-            <strong><i> </i></strong> En CSM Mobiliario nos enorgullece presentar soluciones innovadoras en mobiliario metálico que no solo cumplen con las expectativas estéticas, sino que también aseguran la funcionalidad y durabilidad que su espacio
-            merece.
-            <br />
-            <br />Somos una empresa especializada en el diseño y fabricación de camas metalicas, camas plegables, estanterías metálicas, mesas, sillas y mobiliario en acero inoxidable que fusionan la resistencia del acero con un estilo moderno y sofisticado.
-        </p>
-    </main>
+
 
     <div class="Secciones">
         <div id="Camas" class="Fix"></div>
 
-        <h2>Camas</h2>
+        <h2>Pinturas</h2>
 
         <div class="container-items">
             <div class="item">
@@ -132,16 +138,6 @@
 
             <div class="item">
                 <figure>
-                    <img src="Imagenes/Mujer escultura en seramica.jpeg" loading="lazy" alt="cuadro" />
-                </figure>
-                <div class="info-product">
-                    <h3>Mujer</h3>
-                    <p class="price">$145</p>
-                </div>
-            </div>
-
-            <div class="item">
-                <figure>
                     <img src="Imagenes/Pacha mama Mari.jpeg" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
@@ -152,107 +148,146 @@
 
             <div class="item">
                 <figure>
-                    <img src="Imagenes/venus aérea.jpeg" loading="lazy" alt="cuadro" />
+                    <img src="Imagenes/Árbol 60 X80.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3>venus aérea</h3>
-                    <p class="price">$150</p>
+                    <h3>Árbol 60 X80</h3>
+                    <p class="price">$80</p>
                 </div>
             </div>
-        </div>
 
-        <div id="Sillas" class="Fix"></div>
-
-        <h2>Sillas</h2>
-
-        <div class="container-items">
             <div class="item">
                 <figure>
-                    <img src="Imagenes/venus aérea.jpeg" loading="lazy" alt="cuadro" />
+                    <img src="Imagenes/Día y Noche.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3>venus aérea</h3>
-                    <p class="price">$39</p>
+                    <h3>Día y Noche</h3>
+                    <p class="price">$80</p>
                 </div>
             </div>
-            <div class="item_sur">
+
+            <div class="item">
                 <figure>
-                    <img src="Imagenes/vuelvo al sur 2.jpeg" loading="lazy" alt="cuadro" />
+                    <img src="Imagenes/Diáspora 70 X 30 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3>venus aérea</h3>
-                    <p class="price">$23,99</p>
+                    <h3>Diáspora 70 X 30 cm</h3>
+                    <p class="price">$80</p>
                 </div>
             </div>
-            <div class="item_sur">
+
+            <div class="item">
                 <figure>
-                    <img src="Imagenes/Vulevo al sur 1.jpeg" loading="lazy" alt="cuadro" />
+                    <img src="Imagenes/Ecos de Africa 2 140 X 100 cm.JPG" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
-                    <h3>Vulevo al sur 1</h3>
-                    <p class="price">$23,99</p>
+                    <h3>Ecos de Africa 2 140 X 100 cm</h3>
+                    <p class="price">$80</p>
                 </div>
             </div>
+
+
+            <div class="item">
+                <figure>
+                    <img src="Imagenes/Ecos de Africa 3 140 X 100 cm.JPG" loading="lazy" alt="cuadro" />
+                </figure>
+                <div class="info-product">
+                    <h3>Árbol 60 X80</h3>
+                    <p class="price">$80</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <figure>
+                    <img src="Imagenes/Ecos de Africa 140 X 100 cm.JPG" loading="lazy" alt="cuadro" />
+                </figure>
+                <div class="info-product">
+                    <h3>Árbol 60 X80</h3>
+                    <p class="price">$80</p>
+                </div>
+            </div>
+
             <div class="item">
                 <figure>
                     <img src="Imagenes/Encuentro.jpeg" loading="lazy" alt="cuadro" />
                 </figure>
                 <div class="info-product">
                     <h3>Encuentro</h3>
-                    <p class="price">$23,99</p>
+                    <p class="price">$80</p>
                 </div>
             </div>
+
+            <div class="item">
+                <figure>
+                    <img src="Imagenes/Equus 60 X 80 cm.JPG" loading="lazy" alt="cuadro" />
+                </figure>
+                <div class="info-product">
+                    <h3>Equus 60 X 80 cm</h3>
+                    <p class="price">$80</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <figure>
+                    <img src="Imagenes/Festividad 60 X 80 cm.JPG" loading="lazy" alt="cuadro" />
+                </figure>
+                <div class="info-product">
+                    <h3>Festividad 60 X 80 cm</h3>
+                    <p class="price">$80</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <figure>
+                    <img src="Imagenes/Festivo 56 X 46 cm.JPG" loading="lazy" alt="cuadro" />
+                </figure>
+                <div class="info-product">
+                    <h3>Festivo 56 X 46 cm</h3>
+                    <p class="price">$80</p>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="Imagenes/Migración 117 X 80 cm.JPG" loading="lazy" alt="cuadro" />
+                </figure>
+                <div class="info-product">
+                    <h3>Migración 117 X 80 cm</h3>
+                    <p class="price">$80</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <figure>
+                    <img src="Imagenes/Personajes 130 X 140 cm.JPG" loading="lazy" alt="cuadro" />
+                </figure>
+                <div class="info-product">
+                    <h3>Personajes 130 X 140 cm</h3>
+                    <p class="price">$80</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <figure>
+                    <img src="Imagenes/Vuelvo al Sur 70 X 30 cm.JPG" loading="lazy" alt="cuadro" />
+                </figure>
+                <div class="info-product">
+                    <h3>Vuelvo al Sur 70 X 30 cm</h3>
+                    <p class="price">$80</p>
+                </div>
+            </div>
+
+            <div id="contacto" class="Fix"></div>
+
+
         </div>
 
-
-
-
-
-
-
-        <div id="contacto" class="Fix"></div>
-
-        <h2>Contactanos</h2>
-
-        <form class="formulario" action="#" method="post" id="Formu">
-            <legend>Contactános llenando todos los campos por favor</legend>
-
-            <div class="contenedor-campos">
-                <div class="campo">
-                    <label>Nombre</label>
-
-                    <input type="text" name="nombre" placeholder="Nombre" id="Nombre" required />
-                </div>
-                <div class="campo">
-                    <label>Teléfono</label>
-
-                    <input type="tel" name="telefono" placeholder="Teléfono" id="Telefono" />
-                </div>
-                <div class="campo w-100">
-                    <label>Correo</label>
-
-                    <input type="mail" name="correo" placeholder="Mail" id="Mail" />
-                </div>
-                <div class="campo w-100">
-                    <label>Mensaje:</label>
-
-                    <textarea id="Mensaje"></textarea>
-                </div>
-            </div>
-            <!--.contenedor-campos-->
-            <div class="submit-button">
-                <input class="button" type="submit" value="Enviar" />
-            </div>
-        </form>
-    </div>
-
-    <!-- boton whats -->
-    <a href="https://wa.me/593987548351" class="whatsapp-button" target="_blank">
-        <img src="Imagenes/whatsapp.png" alt="Icono de WhatsApp" height="60px" />
-    </a>
-    <footer class="footer">
-        <img src="Imagenes/favicon.svg" alt="" width="18px" /></div>
-        <b>CSMMobiliario</b></p>
+        <!-- boton whats -->
+        <a href="https://wa.me/34688738030" class="whatsapp-button" target="_blank">
+            <img src="Imagenes/whatsapp.png" alt="Icono de WhatsApp" height="60px" />
+        </a>
+        <footer class="footer">
+            <img src="Imagenes/favicon.svg" alt="" width="18px" /></div>
+    <b>Hector Luna</b></p>
 
     </footer>
     <!-- <script src="index.js"></script> -->
