add description pintura in index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="info-product">
                     <h3 class="TituloModal">Gea</h3>
                     <p class="Descrip"> </p>
-                    <p class="price">$105</p>
+                    <p class="price">$300</p>
                 </div>
             </div>
 
@@ -120,7 +120,7 @@
                 <div class="info-product">
                     <h3 class="TituloModal">Luna</h3 class="TituloModal">
                     <p class="Descrip"> </p>
-                    <p class="price">$95</p>
+                    <p class="price">$300</p>
                 </div>
             </div>
 
@@ -131,7 +131,7 @@
                 <div class="info-product">
                     <h3 class="TituloModal">Madre</h3 class="TituloModal">
                     <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="price">$300</p>
                 </div>
             </div>
 
@@ -141,8 +141,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Pacha mama Mari</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$140</p>
+                    <p class="Descrip">Es la deidad vasca que representa la naturaleza y a ella la celebramos en los solisticios.</p>
+                    <p class="price">$600</p>
                 </div>
             </div>
 
@@ -152,8 +152,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Árbol 60 X80</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">Representa la naturaleza, pero tambien el mundo subterraneo que se refleja como un espejo.</p>
+                    <p class="price">$300</p>
                 </div>
             </div>
 
@@ -163,8 +163,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Día y Noche</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">Es una representacion festiva del ser humano, celebrando a la naturaleza</p>
+                    <p class="price">$200</p>
                 </div>
             </div>
 
@@ -174,8 +174,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Diáspora 70 X 30 cm</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">Son los movimientos migratorios, a los que se ve avocado un grupo de personas</p>
+                    <p class="price">$200</p>
                 </div>
             </div>
 
@@ -185,8 +185,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Ecos de Africa 2 140 X 100 cm</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">En este mundo diverso africa a sido un continente al que europa le a esquilmado sus recursos y empobrecido por conveniencias simplemente monetareas.</p>
+                    <p class="price">$600</p>
                 </div>
             </div>
 
@@ -197,8 +197,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Árbol 60 X80</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">En este mundo diverso africa a sido un continente al que europa le a esquilmado sus recursos y empobrecido por conveniencias simplemente monetareas.</p>
+                    <p class="price">$600</p>
                 </div>
             </div>
 
@@ -208,8 +208,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Árbol 60 X80</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">En este mundo diverso africa a sido un continente al que europa le a esquilmado sus recursos y empobrecido por conveniencias simplemente monetareas.</p>
+                    <p class="price">$600</p>
                 </div>
             </div>
 
@@ -219,8 +219,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Encuentro</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">Representa la amistad o el amor como una situacion que nos sucede en la vida.</p>
+                    <p class="price">$200</p>
                 </div>
             </div>
 
@@ -230,8 +230,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Equus 60 X 80 cm</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">Este lienzo quiere transmitirnos los movimientos equinos tal como estarian en la pared de una cueva.</p>
+                    <p class="price">$300</p>
                 </div>
             </div>
 
@@ -241,8 +241,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Festividad 60 X 80 cm</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip"> Mari en la mitologia vazca es la pacha mama de la mitologia andina en honor de ellas celebramos por todo lo que recibimos.</p>
+                    <p class="price">$300</p>
                 </div>
             </div>
 
@@ -252,8 +252,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Festivo 56 X 46 cm</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">Los humanos desde tiempos ansestrales celebramos todo lo que nos ofrece la pacha mama con alegria y veneracion.</p>
+                    <p class="price">$300</p>
                 </div>
             </div>
             <div class="item_sur">
@@ -262,8 +262,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Migración 117 X 80 cm</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">Es una constante en mi obra y en la historioa de la humanidad, la migracion de grupos humanos o pueblos buscando un futuro mejor.</p>
+                    <p class="price">$450</p>
                 </div>
             </div>
 
@@ -273,8 +273,8 @@
                 </figure>
                 <div class="info-product">
                     <h3 class="TituloModal">Personajes 130 X 140 cm</h3 class="TituloModal">
-                    <p class="Descrip"> </p>
-                    <p class="price">$80</p>
+                    <p class="Descrip">Son las representacion de aquellas personas que nos han marcado en la vida por diversas circustancias, hechiceras, magas que hacen de este mundo un sitio mejor para vivir.</p>
+                    <p class="price">$800</p>
                 </div>
             </div>
 
